--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
@@ -8,18 +8,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="25dp"
             android:layout_gravity="center_horizontal"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@color/colorPrimaryDark"/>
+            android:src="@drawable/market_review_woong"/>
         <TextView
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="만족해요!"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:fontFamily="@font/nanum_extrabold"
+            android:textSize="16sp"
+            android:textColor="#237A59"/>
         <RatingBar
+            android:layout_marginTop="5dp"
             android:id="@+id/avr_rating_marketreview"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
@@ -44,9 +47,9 @@
         </LinearLayout>
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginVertical="10dp"
-            android:background="@android:color/darker_gray"
+            android:layout_height="0.5dp"
+            android:layout_marginVertical="20dp"
+            android:background="#ADADAD"
             />
 
         <LinearLayout
@@ -58,23 +61,35 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:layout_marginLeft="10dp">
+                android:layout_marginLeft="20dp">
                 <TextView
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="15sp"
+                    android:textColor="#1C2320"
                     android:paddingVertical="9dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="배달 속도"/>
                 <TextView
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="15sp"
+                    android:textColor="#1C2320"
                     android:paddingVertical="9dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="맛"/>
                 <TextView
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="15sp"
+                    android:textColor="#1C2320"
                     android:paddingVertical="9dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="유통 기한"/>
                 <TextView
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="15sp"
+                    android:textColor="#1C2320"
                     android:paddingVertical="9dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -129,12 +144,15 @@
         </LinearLayout>
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginVertical="10dp"
-            android:background="@android:color/darker_gray"
+            android:layout_height="0.5dp"
+            android:layout_marginVertical="20dp"
+            android:background="#ADADAD"
             />
         <TextView
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/nanum_bold"
+            android:textSize="15sp"
+            android:textColor="#707070"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="포토"/>
@@ -142,6 +160,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal">
             <ImageView
                 android:id="@+id/img1_review"
@@ -149,28 +168,28 @@
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
             <ImageView
                 android:id="@+id/img2_review"
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
             <ImageView
                 android:id="@+id/img3_review"
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
             <ImageView
                 android:id="@+id/img4_review"
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -183,41 +202,44 @@
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
             <ImageView
                 android:id="@+id/img6_review"
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
             <ImageView
                 android:id="@+id/img7_review"
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
             <ImageView
                 android:id="@+id/img8_review"
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:background="@android:color/darker_gray"
                 android:scaleType="centerCrop"
-                android:layout_margin="1dp"/>
+                android:layout_margin="5dp"/>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginVertical="10dp"
-            android:background="@android:color/darker_gray"
+            android:layout_height="0.5dp"
+            android:layout_marginVertical="20dp"
+            android:background="#ADADAD"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:text="후기보기"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/nanum_bold"
+            android:textSize="15sp"
+            android:textColor="#707070"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_sellermarket_review"
             android:layout_width="match_parent"
