--- a/Woong_Android/app/src/main/res/layout/fragment_thisweek_home.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_thisweek_home.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#FFFFFF">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="38dp"
@@ -18,137 +19,166 @@
             android:fontFamily="@font/nanum_extrabold"
             android:text="이주의 농부"/>
     </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <ImageView
-                android:id="@+id/iv_profile_thisweek"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:src="@drawable/weekely_farmer_profile"
-                android:layout_marginTop="17dp"
-                android:layout_gravity="center_horizontal"/>
-            <TextView
-                android:id="@+id/tv_marketname_thisweek"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/iv_profile_thisweek"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="21dp"
-                android:fontFamily="@font/nanum_bold"
-                android:textSize="12sp"
-                android:text="뚜덩 마켓"
-                android:textColor="#ADADAD"
-                android:layout_gravity="center_horizontal"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/tv_marketname_thisweek"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/nanum_extrabold"
-                android:textColor="#707070"
-                android:textSize="15sp"
-                android:text="최수정 농부님"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="#ADADAD"
-                android:layout_marginTop="25dp"/>
-            <TextView
-                android:id="@+id/tv_headline_thisweek"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:textSize="20sp"
-                android:fontFamily="@font/nanum_extrabold"
-                android:text="&quot;맛있는 충격, 홍감자 먹어봤슈?&quot;"
-                android:layout_gravity="center_horizontal"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/tv_headline_thisweek"
-                android:layout_margin="20dp"
-                android:text="감자는 말이여 알감자가 진리재~!
-현듀네 알감자 먹고 예뻐지세유~!
-현듀 프로필 보슈 얼마나 이쁜지^^
-증명됐자나유~?
-무농약 친환경 알감자라 그래유
-알감자만 10년 키워온 프로 알감자 셀러
-믿고 잡숴보슈~"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#d2d2d2"/>
+
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingLeft="15dp"
-                android:paddingBottom="20dp"
-                android:paddingRight="15dp">
-                <TextView
-                    android:id="@+id/tv_recipetitle_thisweek"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:layout_centerHorizontal="true"
-                    android:text="현듀 농부님이 공개한 홍감자 조림 레시피"/>
-                <TextView
-                    android:id="@+id/tv_ingred_thisweek"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_recipetitle_thisweek"
-                    android:layout_marginTop="15dp"
-                    android:text="재료"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_ingred_thisweek"
-                    android:layout_marginTop="10dp"
-                    android:textColor="#d2d2d2"
-                    android:text="감자   감자   감자   감자   고구마"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="15dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="20dp">
-                <TextView
-                    android:id="@+id/tv_step_thisweek"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="첫 번째,"/>
+                android:layout_height="match_parent">
+
                 <ImageView
-                    android:layout_width="250dp"
-                    android:layout_height="150dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/tv_step_thisweek"
-                    android:background="@color/colorPastel"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
-                android:paddingTop="20dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="0dp"
+                    android:background="@drawable/weekly_farmer_content" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_alignParentBottom="true">
                 <Button
-                    android:fontFamily="@font/nanumsquare_bold"
-                    android:textSize="16sp"
                     android:layout_width="188dp"
                     android:layout_height="48dp"
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/green_round_button"
+                    android:fontFamily="@font/nanumsquare_bold"
+                    android:text="마켓 둘러보기"
                     android:textColor="#ffffff"
-                    android:text="마켓 둘러보기"/>
+                    android:textSize="16sp" />
+                </RelativeLayout>
             </RelativeLayout>
+            <!--<ImageView-->
+            <!--android:id="@+id/iv_profile_thisweek"-->
+            <!--android:layout_width="90dp"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:src="@drawable/weekely_farmer_profile"-->
+            <!--android:layout_marginTop="17dp"-->
+            <!--android:layout_gravity="center_horizontal"/>-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_marketname_thisweek"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/iv_profile_thisweek"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="21dp"-->
+            <!--android:fontFamily="@font/nanum_bold"-->
+            <!--android:textSize="12sp"-->
+            <!--android:text="뚜덩 마켓"-->
+            <!--android:textColor="#ADADAD"-->
+            <!--android:layout_gravity="center_horizontal"/>-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:layout_below="@+id/tv_marketname_thisweek"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:fontFamily="@font/nanum_extrabold"-->
+            <!--android:textColor="#707070"-->
+            <!--android:textSize="15sp"-->
+            <!--android:text="최수정 농부님"/>-->
+            <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0.5dp"-->
+            <!--android:background="#ADADAD"-->
+            <!--android:layout_marginTop="25dp"/>-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_headline_thisweek"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="15dp"-->
+            <!--android:textSize="20sp"-->
+            <!--android:fontFamily="@font/nanum_extrabold"-->
+            <!--android:text="&quot;맛있는 충격, 홍감자 먹어봤슈?&quot;"-->
+            <!--android:layout_gravity="center_horizontal"/>-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textAlignment="center"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_below="@+id/tv_headline_thisweek"-->
+            <!--android:layout_margin="20dp"-->
+            <!--android:text="감자는 말이여 알감자가 진리재~!-->
+            <!--현듀네 알감자 먹고 예뻐지세유~!-->
+            <!--현듀 프로필 보슈 얼마나 이쁜지^^-->
+            <!--증명됐자나유~?-->
+            <!--무농약 친환경 알감자라 그래유-->
+            <!--알감자만 10년 키워온 프로 알감자 셀러-->
+            <!--믿고 잡숴보슈~"/>-->
+            <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1dp"-->
+            <!--android:background="#d2d2d2"/>-->
+            <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingTop="20dp"-->
+            <!--android:paddingLeft="15dp"-->
+            <!--android:paddingBottom="20dp"-->
+            <!--android:paddingRight="15dp">-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_recipetitle_thisweek"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textStyle="bold"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:text="현듀 농부님이 공개한 홍감자 조림 레시피"/>-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_ingred_thisweek"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/tv_recipetitle_thisweek"-->
+            <!--android:layout_marginTop="15dp"-->
+            <!--android:text="재료"/>-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/tv_ingred_thisweek"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:textColor="#d2d2d2"-->
+            <!--android:text="감자   감자   감자   감자   고구마"/>-->
+            <!--</RelativeLayout>-->
+            <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingLeft="15dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:paddingBottom="20dp">-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_step_thisweek"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="첫 번째,"/>-->
+            <!--<ImageView-->
+            <!--android:layout_width="250dp"-->
+            <!--android:layout_height="150dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_below="@+id/tv_step_thisweek"-->
+            <!--android:background="@color/colorPastel"/>-->
+            <!--</RelativeLayout>-->
+            <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingBottom="20dp"-->
+            <!--android:paddingTop="20dp">-->
+            <!--<Button-->
+            <!--android:fontFamily="@font/nanumsquare_bold"-->
+            <!--android:textSize="16sp"-->
+            <!--android:layout_width="188dp"-->
+            <!--android:layout_height="48dp"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:background="@drawable/green_round_button"-->
+            <!--android:textColor="#ffffff"-->
+            <!--android:text="마켓 둘러보기"/>-->
+            <!--</RelativeLayout>-->
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
