--- a/Woong_Android/app/src/main/res/layout/activity_review_write.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_review_write.xml
@@ -147,10 +147,14 @@
                 <RatingBar
                     android:id="@+id/rating_speed_review"
                     android:rating="5"
-                    style="?android:attr/ratingBarStyleIndicator"
-                    android:layout_width="wrap_content"
+                    android:numStars="5"
+                    style="@style/StarRatingBar"
+                    android:progressDrawable="@drawable/ratingbar_custom"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:isIndicator="false"
+                    android:scaleX="2"
+                    android:scaleY="2"
+
                     android:stepSize="1"/>
                 <TextView
                     android:id="@+id/txt_speed_review"
