--- a/Woong_Android/app/src/main/res/values/styles.xml
+++ b/Woong_Android/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="StarRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/ratingbar_custom</item>
+    </style>
+
 </resources>
