다이얼로그 gui

--- a/Woong_Android/app/src/main/res/layout/dialog_image_review.xml
+++ b/Woong_Android/app/src/main/res/layout/dialog_image_review.xml
@@ -11,9 +11,12 @@
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:background="@color/colorPastel"
+        android:layout_width="188dp"
+        android:layout_height="48dp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/nanum_extrabold"
+        android:textSize="15sp"
+        android:background="@drawable/green_round_button"
         android:text="닫기"/>
 
 </RelativeLayout>
