--- a/Woong_Android/app/src/main/res/layout/dialog_isright_location.xml
+++ b/Woong_Android/app/src/main/res/layout/dialog_isright_location.xml
@@ -1,28 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:background="@drawable/dialog_isright_location_img"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="200dp"
+    android:background="#FFFFFF"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="277dp"
     android:layout_height="150dp">
     <TextView
-        android:layout_centerInParent="true"
+        android:layout_marginTop="43dp"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="해당 주소로 등록하시겠습니까?"/>
+        android:text="배달 받을 주소가 맞나요?"
+        android:fontFamily="@font/nanum_bold"
+        android:textSize="14sp"
+        android:textColor="#707070"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="100dp"
+        android:background="#ADADAD"/>
     <TextView
         android:id="@+id/btn_ok_location"
         android:gravity="center"
         android:layout_alignParentBottom="true"
-        android:layout_width="90dp"
-        android:layout_height="40dp"
+        android:layout_width="133dp"
+        android:layout_height="50dp"
+        android:fontFamily="@font/nanum_bold"
+        android:textSize="14sp"
+        android:textColor="#237A59"
         android:text="확인"/>
     <TextView
         android:id="@+id/btn_cancel_location"
         android:gravity="center"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_width="90dp"
-        android:layout_height="40dp"
+        android:layout_width="133dp"
+        android:layout_height="50dp"
+        android:fontFamily="@font/nanum_bold"
+        android:textSize="14sp"
+        android:textColor="#237A59"
         android:text="취소"/>
 
-
+    <View
+        android:layout_width="0.5dp"
+        android:layout_height="50dp"
+        android:background="#ADADAD"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
