--- a/Woong_Android/app/src/main/res/layout/activity_consumer_login.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_login.xml
@@ -44,7 +44,8 @@
                         android:layout_marginLeft="104dp"
                         android:layout_centerVertical="true"
                         android:background="#FFFFFF"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
+                        android:inputType="textEmailAddress"
                         android:fontFamily="@font/nanum_regular"/>
                 </RelativeLayout>
 
@@ -64,8 +65,8 @@
                         android:layout_marginLeft="104dp"
                         android:layout_centerVertical="true"
                         android:background="#FFFFFF"
-                        android:textSize="16dp"
-                        android:fontFamily="@font/nanum_regular"/>
+                        android:inputType="textPassword"
+                        android:textSize="16sp"/>
                 </RelativeLayout>
 
                 <Button
