--- a/Woong_Android/app/src/main/res/layout/fragment_market_tab.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_market_tab.xml
@@ -42,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#ffffff"
+        android:elevation="4dp"
         app:tabIndicatorColor="#227958"></android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_market"
