--- a/Woong_Android/app/src/main/res/layout/fragment_myproduct_tab.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_myproduct_tab.xml
@@ -22,7 +22,8 @@
         android:id="@+id/tab_top_myproduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabIndicatorColor="#227958"></android.support.design.widget.TabLayout>
+        app:tabIndicatorColor="#227958"
+        android:elevation="4dp"></android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_myproduct"
       android:layout_width="match_parent"
