--- a/Woong_Android/app/src/main/res/layout/fragment_notice_tab.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_notice_tab.xml
@@ -22,6 +22,7 @@
         android:id="@+id/tab_top_notice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="4dp"
         app:tabIndicatorColor="#227958"></android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_notice"
