--- a/Woong_Android/app/src/main/res/layout/fragment_submenu_tab.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_submenu_tab.xml
@@ -42,7 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#ffffff"
-        app:tabIndicatorColor="#227958"></android.support.design.widget.TabLayout>
+        app:tabIndicatorColor="#227958"
+        android:elevation="4dp"></android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_submenu"
         android:layout_width="match_parent"
