<마켓탭 - 내 주변 마켓> 아이템 누르면 마켓으로 이동. 뱃지 표시 완료.

--- a/Woong_Android/app/src/main/res/layout/item_market_mymarket.xml
+++ b/Woong_Android/app/src/main/res/layout/item_market_mymarket.xml
@@ -44,7 +44,7 @@
                 android:layout_height="18dp"
                 android:layout_toRightOf="@id/tv_name_market"
                 android:layout_marginLeft="14dp"
-                android:src="@drawable/market_lanking_favorite"/>
+                android:src="#ffffff"/>
             <TextView
                 android:fontFamily="@font/nanum_bold"
                 android:textSize="13sp"
