--- a/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
@@ -55,14 +55,15 @@
             android:layout_alignParentRight="true"/>
         <TextView
             android:id="@+id/tv_cancel_product"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="29dp"
+            android:layout_height="25dp"
             android:textColor="#ffffff"
             android:text="취소"
             android:visibility="gone"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="13dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:background="@color/colorPrimaryDark"/>
         <EditText
             android:id="@+id/et_search_product"
             android:layout_width="250dp"
@@ -72,11 +73,11 @@
             android:textAlignment="center"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:background="#00000000"
+            android:background="@drawable/gray_round_button"
             android:textColor="#000000"
-            android:visibility="gone"
             android:maxLines="1"
-            android:textSize="17sp"
+            android:textSize="16sp"
+            android:fontFamily="@font/nanum_bold"
             android:hint="검색해주세요."/>
     </RelativeLayout>
     <RelativeLayout
