--- a/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
@@ -54,10 +54,13 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
         <TextView
+            android:layout_marginTop="3dp"
             android:id="@+id/tv_cancel_product"
-            android:layout_width="29dp"
+            android:layout_width="33dp"
             android:layout_height="25dp"
             android:textColor="#ffffff"
+            android:textSize="16sp"
+            android:fontFamily="@font/nanum_regular"
             android:text="취소"
             android:visibility="gone"
             android:layout_marginRight="13dp"
@@ -77,6 +80,7 @@
             android:textColor="#000000"
             android:maxLines="1"
             android:textSize="16sp"
+            android:visibility="gone"
             android:fontFamily="@font/nanum_bold"
             android:hint="검색해주세요."/>
     </RelativeLayout>
