--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_intro.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_intro.xml
@@ -55,8 +55,7 @@
                 android:layout_width="250dp"
                 android:layout_height="146dp"
                 android:layout_centerHorizontal="true"
-                android:scaleType="centerCrop"
-                android:src="" />
+                android:scaleType="centerCrop" />
 
         </RelativeLayout>
 
