최근주소 히스토리가져오기, 채팅 post 구현중

--- a/Woong_Android/app/src/main/res/layout/activity_notice_chat.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_notice_chat.xml
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#ADADAD"
-                android:text="대화를 입력하세요"
+                android:hint="대화를 입력하세요"
                 android:layout_centerVertical="true"
                 android:background="@null"/>
         </RelativeLayout>
