--- a/Woong_Android/app/src/main/res/layout/tutorial_item.xml
+++ b/Woong_Android/app/src/main/res/layout/tutorial_item.xml
@@ -2,8 +2,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-   <android.support.v4.view.ViewPager
-       android:id="@+id/viewpager_tutorial"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+    <ImageView
+        android:id="@+id/tutorial_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
