<주문하기> 페이지 복구 및 값 입력, <장바구니> 개수 변환 반영. 처음에만 총 결제 금액 변경. (수정 중)

--- a/Woong_Android/app/src/main/res/layout/fragment_myproduct_cart.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_myproduct_cart.xml
@@ -113,6 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="30dp">
                     <TextView
+                        android:id="@+id/tv_deliver_myproduct"
                         android:layout_marginTop="5dp"
                         android:textSize="15sp"
                         android:fontFamily="@font/nanum_bold"
