판매자 서비스 준비중 띄우기, 리뷰 레이팅바 오류 해결, 탭레이아웃에 그림자 추가, 회원가입 스피너 짤리는거 해결, gui 다듬기 완료

--- a/Woong_Android/app/src/main/res/layout/activity_review_write.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_review_write.xml
@@ -147,7 +147,7 @@
                 <RatingBar
                     android:id="@+id/rating_speed_review"
                     android:rating="5"
-                    android:numStars="5"
+                    android:isIndicator="false"
                     style="?android:attr/ratingBarStyleIndicator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
