--- a/Woong_Android/app/src/main/res/layout/item_bookmark_myproduct.xml
+++ b/Woong_Android/app/src/main/res/layout/item_bookmark_myproduct.xml
@@ -147,6 +147,7 @@
                 android:id="@+id/firsttag_bookmark_myproduct"
                 android:layout_width="74dp"
                 android:layout_height="23dp"
+                android:gravity="center"
                 android:text="#당일배송"
                 android:textAlignment="center"
                 android:background="@drawable/green_round_button"
@@ -160,6 +161,7 @@
                 android:id="@+id/secondtag_bookmark_myproduct"
                 android:layout_width="74dp"
                 android:layout_height="23dp"
+                android:gravity="center"
                 android:textAlignment="center"
                 android:text="#무료배송"
                 android:background="@drawable/green_round_button"
