--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
@@ -67,10 +67,11 @@
                         android:id="@+id/spinner_year_consumer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.3" />
+                        android:layout_weight="1.3"
+                        />
                     <TextView
                         android:fontFamily="@font/nanum_bold"
-                        android:textSize="15sp"
+                        android:textSize="13sp"
                         android:textColor="#707070"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -82,7 +83,7 @@
                         android:layout_weight="1" />
                     <TextView
                         android:fontFamily="@font/nanum_bold"
-                        android:textSize="15sp"
+                        android:textSize="13sp"
                         android:textColor="#707070"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -94,7 +95,7 @@
                         android:layout_weight="1" />
                     <TextView
                         android:fontFamily="@font/nanum_bold"
-                        android:textSize="15sp"
+                        android:textSize="13sp"
                         android:textColor="#707070"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
