--- a/Woong_Android/app/src/main/res/layout/fragment_market_tab.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_market_tab.xml
@@ -27,6 +27,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="15dp"
             android:layout_toRightOf="@+id/tv_logo_market"
+            android:background="@color/colorPrimaryDark"
             android:src="@drawable/home_vegetable_under_more_white"/>
         <ImageView
             android:id="@+id/btn_cart_market"
@@ -42,8 +43,11 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#ffffff"
-        android:elevation="4dp"
         app:tabIndicatorColor="@color/colorPrimaryDark"></android.support.design.widget.TabLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/below_shadow"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_market"
         android:layout_width="match_parent"
