--- a/Woong_Android/app/src/main/res/layout/fragment_myproduct_tab.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_myproduct_tab.xml
@@ -22,8 +22,11 @@
         android:id="@+id/tab_top_myproduct"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        app:tabIndicatorColor="@color/colorPrimaryDark"
-        android:elevation="4dp"></android.support.design.widget.TabLayout>
+        app:tabIndicatorColor="@color/colorPrimaryDark"></android.support.design.widget.TabLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/below_shadow"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_myproduct"
       android:layout_width="match_parent"
