--- a/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
@@ -86,10 +86,9 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="45dp"
         android:paddingTop="15dp"
-        android:paddingLeft="15dp"
-        android:paddingBottom="5dp">
+        android:paddingLeft="15dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
