--- a/Woong_Android/app/src/main/res/layout/item_delinreview_notice.xml
+++ b/Woong_Android/app/src/main/res/layout/item_delinreview_notice.xml
@@ -25,6 +25,7 @@
                 android:layout_width="240dp"
                 android:layout_height="40dp">
                 <TextView
+                    android:id="@+id/marketname_alarm_item"
                     android:fontFamily="@font/nanum_extrabold"
                     android:textSize="15sp"
                     android:textColor="#707070"
@@ -32,6 +33,7 @@
                     android:layout_height="wrap_content"
                     android:text=""/>
                 <TextView
+                    android:id="@+id/productname_alarm_item"
                     android:fontFamily="@font/nanumsquare_bold"
                     android:textSize="13sp"
                     android:textColor="#707070"
@@ -57,6 +59,7 @@
                     android:textColor="#ADADAD"
                     android:text="주문일"/>
                 <TextView
+                    android:id="@+id/date_order_alarm_item"
                     android:paddingLeft="25dp"
                     android:layout_toRightOf="@+id/orderdate"
                     android:layout_width="wrap_content"
@@ -76,6 +79,7 @@
                     android:textColor="#ADADAD"
                     android:text="결제 금액"/>
                 <TextView
+                    android:id="@+id/cost_order_alarm_item"
                     android:paddingLeft="12dp"
                     android:layout_toRightOf="@+id/totalpay"
                     android:layout_alignParentBottom="true"
