--- a/Woong_Android/app/src/main/res/layout/item_history_address.xml
+++ b/Woong_Android/app/src/main/res/layout/item_history_address.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginVertical="10dp"
     android:background="#FFFFFF">
     <ImageView
         android:id="@+id/iv_pin_location"
