<마켓-물품> 한번 내려갔다 와야 받아와짐.

--- a/Woong_Android/app/src/main/res/layout/fragment_my_page.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_my_page.xml
@@ -43,7 +43,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="김영서"
+                        android:text="이동수"
                         android:fontFamily="@font/nanum_extrabold"
                         android:textSize="18sp"
                         android:layout_gravity="center"
@@ -66,7 +66,7 @@
                             android:layout_marginLeft="15dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="YOUNG12@gmail.com"/>
+                            android:text="dongsu@gmail.com"/>
                     </LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
