--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_productdetail.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_productdetail.xml
@@ -263,6 +263,7 @@
                 android:layout_gravity="center"
                 android:src="@drawable/market_thing_details_underbar_devide_line"/>
             <Button
+                android:id="@+id/btn_buy_productdetail"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
